--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
+  "name": "feira-solidaria-backend",
+  "version": "1.0.0",
+  "description": "Backend para o sistema Feira Solidária (UECE/Atlântico Avanti)",
+  "main": "src/app.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "nodejs",
+    "express",
+    "prisma",
+    "postgresql",
+    "cors",
+    "feira-solidaria"
+  ],
+  "author": "Lizangelo / ",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^6.14.0",
+    "cors": "^2.8.5",         
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0"
+  },
   "devDependencies": {
     "prisma": "^6.14.0"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.14.0"
   }
 }
