--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend para o sistema Feira Solidária (UECE/Atlântico Avanti)",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
